Added Buttons in Home

--- a/SIH_Project/Templates/home.html
+++ b/SIH_Project/Templates/home.html
@@ -6,6 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <a href = "https://youtu.be/erSLZwmWfYQ?si=OG7TQB_KaBp7bwov">
+        <button>View figma Course</button>
+    </a> <br></br>
+    <a href = "https://youtu.be/erSLZwmWfYQ?si=OG7TQB_KaBp7bwov">
+        <button>View Machine Learning Course</button>
+    </a><br></br>
+    <a href = "https://youtu.be/erSLZwmWfYQ?si=OG7TQB_KaBp7bwov">
+        <button>View Photoshop Course</button>
+    </a><br></br>
+    <a href = "https://youtu.be/erSLZwmWfYQ?si=OG7TQB_KaBp7bwov">
+        <button>View Digital Marketing Course</button>
+    </a><br></br>
+    <a href = "https://youtu.be/erSLZwmWfYQ?si=OG7TQB_KaBp7bwov">
+        <button>View DSA Course</button>
+    </a><br></br>
+
+    <a>
+        <button>Call Tablaue Api</button>
+    </a>
 </body>
 </html>
